<resources>
    <string name="app_name">LoginAsdf</string>
    <string name="tvwUsuario">Usuario</string>
    <string name="txtUsuario"></string>
    <string name="tvwContraseña">Contraseña</string>
    <string name="ptxtContraseña"></string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnRegresar">Regresar</string>
</resources>